# file-uploader

./: .env_dist  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  _config.yml  composer.json  phpstan-bootstrap.php  phpstan.neon.dist  phpunit.xml.dist
.claude/: settings.json
.claude/hooks/: guard-bash.sh  guard-paths.sh  log-instructions.sh  pint-fix-file.sh
.github/workflows/: ci.yml  release.yml
_includes/: head-custom.html
_layouts/: default.html
docs/: RELEASING.md  TODO.md
docs/adr/: 0001-repo-topology.md  0002-base-repo-plus-binding-repos.md  0003-core-i18n-message-catalog.md
go/: README.md  go.mod
go/uploader/: uploader.go
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
js/test/: conformance.test.ts  errors.test.ts  hash.test.ts  strings.test.ts  transport.test.ts  umd-global.test.ts  uploader.test.ts  widget-controller.test.ts  widget-form.test.ts  widget-list.test.ts  widget-theme.test.ts  widget.test.ts
php/: FileManager.php  FileUploader.php
protocol/: CHANGELOG.md  README.md  SPEC.md  openapi.yaml
python/: README.md  pyproject.toml
python/src/file_uploader/: __init__.py
src/: FileManager.php  FileUploader.php
tests/: ChunkValidatorI18nTest.php  ChunkValidatorTest.php  CodedExceptionTest.php  CoreSeamsTest.php  FileManagerLifecycleTest.php  FileManagerTest.php  FileMetadataTest.php  FlysystemStorageTest.php  GuardFileTest.php  MaxFilesTest.php  MessageCatalogTest.php  ResponseFactoryTest.php  SyncMetadataTest.php  UploaderBranchesTest.php
(+54 files in other folders)
