[project]
name = "file-uploader"
version = "0.0.0"
description = "Python client for Upload Protocol v1 (planned, not yet implemented)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Xakki" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_uploader"]
